--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Quiz</title>
+	<title>Code q u i z</title>
 	<!-- bootstrap cdn -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -13,6 +13,58 @@
 </head>
 
 <body>
+	<div class="container">
+		<div class="row justify-content-center mt-5">
+			<div class="col-8">
+				<h1 class="text-center">quiz title</h1>
+				<!-- timer & scores section -->
+				<div class="card text-center mt-3" id="numbersArea">
+					<div class="row justify-content-center">
+						<div class="col-11 mt-1">
+							<hr />
+							<div class="row">
+								<div class="col-3" id="timer">
+									timer crap
+								</div>
+								<div class="col-3">
+								</div>
+								<div class="col-3" id="currentScore">
+									current score
+								</div>
+								<div class="col-3" id="highScore">
+									high score
+								</div>
+							</div>
+							<hr />
+						</div>
+					</div>
+				</div>
+				<!-- questions section -->
+				<div class="card text-center mt-2" id="standardCardBody">
+					<h2 class="text-center mt-3">placeholder</h2>
+					<!-- textarea -->
+					<div class="row justify-content-center">
+						<div class="col-11">
+							<hr />
+							<input class="form-control text-center" type="text" placeholder="placeholder"
+								id="magicHole">
+							<hr />
+						</div>
+					</div>
+					<!-- buttons -->
+					<div class="row justify-content-center mt-1">
+						<div class="col justify-content-center">
+							<button class="btn btn-primary mb-2" type="button" id="answerOne">answer one</button>
+							<button class="btn btn-primary mb-2" type="button" id="answerTwo">answer two</button>
+							<button class="btn btn-primary mb-2" type="button" id="answerThree">answer three</button>
+							<button class="btn btn-primary mb-2" type="button" id="answerFour">answer four</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
 
 
 	<!-- bootstrap scripts -->
