--- a/index.html
+++ b/index.html
@@ -53,11 +53,8 @@
 					</div>
 					<!-- buttons -->
 					<div class="row justify-content-center mt-1">
-						<div class="col justify-content-center">
-							<button class="btn btn-primary mb-2" type="button" id="answerOne">answer one</button>
-							<button class="btn btn-primary mb-2" type="button" id="answerTwo">answer two</button>
-							<button class="btn btn-primary mb-2" type="button" id="answerThree">answer three</button>
-							<button class="btn btn-primary mb-2" type="button" id="answerFour">answer four</button>
+						<div class="col justify-content-center" id="buttons">
+							<!-- buttons get generated H E R E -->
 						</div>
 					</div>
 				</div>
