updating button logic, adding timer logic, adding score logic

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 						<div class="col-11 mt-1">
 							<hr />
 							<div class="row">
-								<div class="col-3" id="timer">
-									timer crap
+								<div class="col-4 text-right" id="fart">
+									<span>time remaining: </span><span id="timer"></span>
+								</div>
+								<div class="col-2">
 								</div>
 								<div class="col-3">
+									<span>current score: </span><span id="currentScore"></span>
 								</div>
-								<div class="col-3" id="currentScore">
-									current score
-								</div>
-								<div class="col-3" id="highScore">
-									high score
+								<div class="col-3">
+									<span>high score: </span><span id="highScore"></span>
 								</div>
 							</div>
 							<hr />
@@ -41,9 +41,9 @@
 				</div>
 				<!-- questions section -->
 				<div class="card text-center mt-2" id="standardCardBody">
-					<h2 class="text-center mt-3">placeholder</h2>
+					<!-- <h2 class="text-center mt-3">placeholder</h2> -->
 					<!-- textarea -->
-					<div class="row justify-content-center">
+					<div class="row justify-content-center mt-1">
 						<div class="col-11">
 							<hr />
 							<input class="form-control text-center" type="text" placeholder="placeholder"
