--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div class="container">
+					<div class="container" id="scoreHole">
 						<!-- open space for list -->
+						<ol></ol>
 
 					</div>
 				</div>
