updating highscore modal display to table, updating highscore sort logic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 				<div class="modal-body">
 					<div class="container" id="scoreHole">
 						<!-- open space for list -->
-						<ol></ol>
+						<!-- <ol></ol> -->
+						<table class="scoretable">
+						</table>
 
 					</div>
 				</div>
