updating .name error

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<div class="col-11 mt-1">
 							<hr />
 							<div class="row">
-								<div class="col-4 text-right" id="fart">
+								<div class="col-4 text-right" id="infoTube">
 									<span>time remaining: </span><span id="timer"></span>
 								</div>
 								<div class="col-2">
