--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 				</div>
 				<div class="modal-footer justify-content-center">
 					<div class="container">
-						<button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+						<div class="row justify-content-center">
+							<button type="button" class="btn btn-primary" data-bs-dismiss="modal"
 							id="close">close</button>
+						</div>
 					</div>
 				</div>
 			</div>
