updating functions and timer details

--- a/index.html
+++ b/index.html
@@ -26,18 +26,25 @@
 				</div>
 				<div class="modal-body">
 					<div class="container" id="scoreHole">
-						<!-- open space for list -->
-						<!-- <ol></ol> -->
 						<table class="scoretable">
+							<thead>
+								<tr>
+									<!-- <th id="thOne">pos.</th> -->
+									<th>name</th>
+									<th>score</th>
+								</tr>
+							<tbody class="scoreTableBody">
+								<!-- body stuff is created here -->
+							</tbody>
+							</thead>
 						</table>
-
 					</div>
 				</div>
 				<div class="modal-footer justify-content-center">
 					<div class="container">
 						<div class="row justify-content-center">
 							<button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-							id="close">close</button>
+								id="close">close</button>
 						</div>
 					</div>
 				</div>
@@ -85,9 +92,23 @@
 						</div>
 					</div>
 					<!-- buttons -->
+					<div class="row" id="checkThis">
+					</div>
+					
 					<div class="row justify-content-center mt-1">
 						<div class="col justify-content-center" id="buttons">
 							<!-- buttons get generated H E R E -->
+							<!-- <div class="row justify-content-center">
+								<div class="col-auto">
+									<label for="inputPassword2" class="visually-hidden">Password</label>
+									<input type="password" class="form-control" id="inputPassword2"
+										placeholder="Password">
+								</div>
+								<div class="col-auto">
+									<button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+								</div>
+							</div> -->
+
 						</div>
 					</div>
 				</div>
