--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<span>current score: </span><span id="currentScore"></span>
 								</div>
 								<div class="col-3">
-									<span><a href="" data-bs-toggle="modal" data-bs-target="#scores">high score: </a></span><span id="highScore"></span>
+									<span><a href="" data-bs-toggle="modal" data-bs-target="#scores">high score</a></span>: <span id="highScore"></span>
 								</div>
 							</div>
 							<hr />
