updating for better mobile response, commenting css

--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
 
 	<div class="container">
 		<div class="row justify-content-center mt-5">
-			<div class="col-8">
+			<div class="col-sm-12 col-lg-8">
 				<h1 class="text-center">JavaScript Quiz</h1>
 				<!-- timer & scores section -->
 				<div class="card text-center mt-3" id="numbersArea">
 					<div class="row justify-content-center">
-						<div class="col-11 mt-1">
+						<div class="col-sm-12 col-lg-11 mt-1">
 							<hr />
 							<div class="row">
-								<div class="col-4 text-right" id="infoTube">
+								<div class="col-sm-12 col-lg-4 text-right" id="infoTube">
 									<span>time remaining: </span><span id="timer"></span>
 								</div>
-								<div class="col-2">
+								<div class="col-sm-12 col-lg-2">
 								</div>
-								<div class="col-3">
+								<div class="col-sm-6 col-lg-3">
 									<span>current score: </span><span id="currentScore"></span>
 								</div>
-								<div class="col-3">
+								<div class="col-sm-6 col-lg-3">
 									<span><a href="" data-bs-toggle="modal" data-bs-target="#scores">high score</a></span>: <span id="highScore"></span>
 								</div>
 							</div>
@@ -83,7 +83,7 @@
 				<div class="card text-center mt-2" id="standardCardBody">
 					<!-- textarea -->
 					<div class="row justify-content-center mt-1" id="startPlace">
-						<div class="col-11">
+						<div class="col-sm-12 col-lg-11">
 							<hr />
 								<div class="text-center" id="magicHole"></div>
 								<p class="text-center" id="messagePalace"></p>
@@ -91,11 +91,8 @@
 						</div>
 					</div>
 					<!-- buttons -->
-					<div class="row" id="checkThis">
-					</div>
-					
 					<div class="row justify-content-center mt-1">
-						<div class="col justify-content-center" id="buttons">
+						<div class="col-sm-12 justify-content-center" id="buttons">
 						</div>
 					</div>
 				</div>
