updating readme, commenting html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<!-- Modal -->
+	<!-- modal start-->
 	<div class="modal fade" id="scores" tabindex="-1" aria-labelledby="optionsLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -79,9 +79,9 @@
 						</div>
 					</div>
 				</div>
-				<!-- questions section -->
+				<!-- main section -->
 				<div class="card text-center mt-2" id="standardCardBody">
-					<!-- textarea -->
+					<!-- questions section -->
 					<div class="row justify-content-center mt-1" id="startPlace">
 						<div class="col-sm-12 col-lg-11">
 							<hr />
@@ -100,7 +100,6 @@
 		</div>
 	</div>
 	</div>
-
 
 	<!-- bootstrap scripts -->
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
